--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,10 +17,11 @@ body{
 
 header{
     width: 100%;
-    height: 600px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 685px;
 }
 
 header > h1{
@@ -76,4 +77,38 @@ header > h1{
 
 #orange-header{
     width: 100%;
+}
+
+.linha{
+    display: flex;
+    width: 100%;
+    height: 40%;
+}
+
+.linhatxt{
+    width: 50%;
+    height: inherit;
+    justify-content: center;
+    
+}
+
+.linhatxt>div{
+    width: inherit;
+    height: inherit;
+    max-height: 20%;
+    padding: 10%;
+    
+}
+
+.linhaimg{
+    width: 50%;
+    
+}
+
+.linhaimg>img{
+    size: inherit;
+    max-width: 100%;
+    max-height: 342px;
+    min-width: 342px;
+    height: 100%;
 }
