--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,114 +1,140 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
-
-body{
-    width: 99vw;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.attribution {
+  font-size: 11px;
+  text-align: center;
 }
-.container{
-    width: 55%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
 
-header{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 685px;
+body {
+  width: 99vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-header > h1{
-    font-size: 60px;
-    color: white;
-    position: absolute;
-    margin-top: 7%;
+header {
+  width: 1000px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 685px;
 }
 
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    position: absolute;
-    width: 55%;
-    
+header > h1 {
+  font-size: 60px;
+  color: white;
+  position: absolute;
+  margin-top: 7%;
 }
 
-#logo-top{
-    margin: 3%;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  position: absolute;
+  width: 1000px;
 }
 
-#menu-top{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 98%;
-    padding-right: 3%;
-    
+#logo-top {
+  margin: 3%;
 }
 
-#menu-top > p{
-    margin-left: 30px;
-    color: white;
-    font-weight: bold;
+#menu-top {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 98%;
+  padding-right: 3%;
 }
 
-#contact{
-    height: 35px;
-    width: 100px;
-    background-color: white;
-    border-radius: 30px;
-    border-style: none;
-    margin-left: 3%;
-    font-weight: bold;
+#menu-top > p {
+  margin-left: 30px;
+  color: white;
+  font-weight: bold;
 }
 
-#arow-down{
-    position: absolute;
-    margin-top: 13%;
-    width: 30px;
+#contact {
+  height: 35px;
+  width: 100px;
+  background-color: white;
+  border-radius: 30px;
+  border-style: none;
+  margin-left: 3%;
+  font-weight: bold;
 }
 
-#orange-header{
-    width: 100%;
+#arow-down {
+  position: absolute;
+  margin-top: 13%;
+  width: 30px;
 }
 
-.linha{
-    display: flex;
-    width: 100%;
-    height: 40%;
+#orange-header {
+  width: 100%;
 }
 
-.linhatxt{
-    width: 50%;
-    height: inherit;
-    justify-content: center;
-    
+.linha {
+  display: flex;
+  width: 1000px;
+  height: 417px;
 }
 
-.linhatxt>div{
-    width: inherit;
-    height: inherit;
-    max-height: 20%;
-    padding: 10%;
-    
+.linhatxt {
+  width: 500px;
+  height: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.linhaimg{
-    width: 50%;
-    
+.linhatxt > div {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
 }
 
-.linhaimg>img{
-    size: inherit;
-    max-width: 100%;
-    max-height: 342px;
-    min-width: 342px;
-    height: 100%;
+.linhaimg {
+  width: 500px;
+}
+
+.linhaimg > img {
+  width: inherit;
+  height: inherit;
+}
+
+.linhaimgtxt {
+  width: 500px;
+  height: inherit;
+}
+
+.linhaimgtxt > img {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+}
+
+.linhaimgtxt > div {
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.linhaimgtxt > div > div {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
