--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,13 +31,15 @@ header {
 }
 
 header > h1 {
+  letter-spacing: 7px;
   font-stretch: ultra-expanded;
   font-size: 40px;
   color: white;
   position: absolute;
-  margin-top: 7%;
+  margin-top: 150px;
   font-family: 'Fraunces', serif;
-  font-weight: 700;
+  font-weight: 900;
+
 }
 
 .nav {
@@ -78,8 +80,8 @@ header > h1 {
 
 #arow-down {
   position: absolute;
-  margin-top: 13%;
-  width: 30px;
+  margin-top: 270px;
+  width: 20px;
 }
 
 #orange-header {
